# internal/routes/routes.go
@@ -3,6 +3,9 @@ package routes
 import (
 	"github.com/gin-gonic/gin"
 	internal "github.com/jdejesus007/gt-api-project/internal/actions"
+	"github.com/jdejesus007/gt-api-project/internal/actions/checkout"
+	"github.com/jdejesus007/gt-api-project/internal/actions/customer"
+	"github.com/jdejesus007/gt-api-project/internal/actions/order"
 )
 
 // ModelRegister defines the common interface to port all associated
@@ -16,8 +19,15 @@ type Model interface {
 
 func Register(ginRouter *gin.Engine) {
 	routeHandlers := []Model{
+		// Internal general routes
 		&internal.PingService{},
+		&internal.FavIconService{},
 		&internal.SwaggerService{},
+
+		// Business routes
+		&customer.CustomerService{},
+		&order.OrderService{},
+		&checkout.CheckoutService{},
 	}
 
 	for _, r := range routeHandlers {
